# psyai

./: .replit  CONTRIBUTING_LLM.md  GETTING_STARTED.md  MIGRATION_SUMMARY.md  PROJECT_CONTEXT.md  PR_DESCRIPTION_VERTEX_AI.md  README.md  VERTEX_AI_MIGRATION_GUIDE.md  app.py  chat_parser.py  design_guidelines.md  pyproject.toml  replit.md  test_import.py
.claude/commands/: architecture.md  epic.md  research-context.md  review-code.md
Collaborative Writing/PsyAI - Research Paper Draft 1/: 0_ABSTRACT.md  1_INTRODUCTION.md  2_MATERIALS_AND_METHODS.md  3_RESULTS.md  4_DISCUSSION.md  FULL_PAPER.md  README.md
client/: index.html
client/src/: App.tsx
client/src/components/: AppSidebar.tsx  ChatMessage.tsx  ConfidenceIndicator.tsx  ConversationCard.tsx  DetailedConfidenceIndicator.tsx  ExpertDashboard.tsx  PatientChatInterface.tsx
client/src/pages/: EscalationView.tsx  ExpertDashboardPage.tsx  MessageDetailView.tsx  PatientSessions.tsx  ReviewView.tsx
docs/: README.md
docs/epics/: EPIC_1_CENTAUR_INTEGRATION.md  EPIC_2_EXPERT_REVIEW_UI.md  EPIC_3_ANALYTICS_DASHBOARD.md
examples/: vertexai_examples.py
ops/: DAILY_PR_PLAYBOOK.md
scripts/: setup_dev.sh
server/: routes.ts  storage.ts
src/psyai/core/: config.py
src/psyai/platform/: __init__.py
src/psyai/platform/langchain_integration/: __init__.py  client.py
src/psyai/platform/langchain_integration/chains/: __init__.py  base.py  conversational.py
src/psyai/platform/vertexai_integration/: __init__.py  client.py
tests/unit/platform/: test_langchain_integration.py
(+10 files in other folders)
